[package]
name = "scruffy"
version = "0.1.0"
authors = ["Fabian Muscariello <nroi@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"
regex = "1"
itertools = "0.10.0"
clap = "3.0.0-beta.2"
walkdir = "2.3.1"

[build-dependencies]
cc = "1.0"

